--- a/src/backend/PLC.Api/Dockerfile
+++ b/src/backend/PLC.Api/Dockerfile
@@ -2,16 +2,30 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Copy csproj and restore dependencies
-COPY ["PLC.Api.csproj", "./"]
+# Copy all project files for restore
+COPY ["PLC.Api/PLC.Api.csproj", "PLC.Api/"]
+COPY ["PLC.Application/PLC.Application.csproj", "PLC.Application/"]
+COPY ["PLC.Infrastructure/PLC.Infrastructure.csproj", "PLC.Infrastructure/"]
+COPY ["PLC.Domain/PLC.Domain.csproj", "PLC.Domain/"]
+
+# Restore dependencies
+WORKDIR /src/PLC.Api
 RUN dotnet restore "PLC.Api.csproj"
 
-# Copy everything else and build
-COPY . .
+# Copy all source files
+WORKDIR /src
+COPY ["PLC.Api/", "PLC.Api/"]
+COPY ["PLC.Application/", "PLC.Application/"]
+COPY ["PLC.Infrastructure/", "PLC.Infrastructure/"]
+COPY ["PLC.Domain/", "PLC.Domain/"]
+
+# Build
+WORKDIR /src/PLC.Api
 RUN dotnet build "PLC.Api.csproj" -c Release -o /app/build
 
 # Publish stage
 FROM build AS publish
+WORKDIR /src/PLC.Api
 RUN dotnet publish "PLC.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 # Runtime stage
