--- a/src/backend/PLC.Api/appsettings.Development.json
+++ b/src/backend/PLC.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Debug",
       "Microsoft.AspNetCore": "Information"
     }
+  },
+  "GoogleCloud": {
+    "ProjectId": "paperless-core-dev-447208",
+    "StorageBucket": "paperless-core-dev-447208-documents",
+    "FirestoreDatabase": "(default)",
+    "FirestoreCollection": "plc-documents",
+    "PubSubTopic": "document-changed"
   }
 }
