--- a/src/backend/PLC.Api/appsettings.json
+++ b/src/backend/PLC.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GoogleCloud": {
+    "ProjectId": "paperless-core-dev-447208",
+    "StorageBucket": "paperless-core-dev-447208-documents",
+    "FirestoreDatabase": "(default)",
+    "FirestoreCollection": "plc-documents",
+    "PubSubTopic": "document-changed"
+  }
 }
