--- a/src/backend/cloudbuild-api.yaml
+++ b/src/backend/cloudbuild-api.yaml
@@ -5,7 +5,7 @@ steps:
       - '-t'
       - '${_IMAGE_URI}'
       - '-f'
-      - 'Dockerfile'
+      - 'PLC.Api/Dockerfile'
       - '.'
     dir: '.'
 
